# xml2json

./: Cargo.toml
src/: main.rs  xmltojson.rs
