[package]
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
categories = ["command-line-utilities", "encoding"]
description = "CLI tool to convert XML into JSON"
edition = "2021"
homepage = "https://www.github.com/janstarke/xml2json"
keywords = ["cli", "xml", "json"]
license = "GPL-3.0"
name = "xml2json"
repository = "https://www.github.com/janstarke/xml2json"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.5.4", features = ["derive"]}
clap-verbosity-flag = {version = "2.2.0"}
log = "0.4"
simplelog = "0.12"
# xmltojson = "0.1.1"
quick-xml = "0.23.1"
serde_json = "1"
